# skill-miner

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
src/skill_miner/: __init__.py  cli.py  extractor.py  hook.py  loader.py  miner.py  reporter.py  store.py  synthesizer.py
src/skill_miner/resources/skill-miner/: SKILL.md
tests/: test_filters.py  test_loader.py  test_miner.py  test_synthesizer.py
tests/fixtures/: sample.jsonl
