[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-miner"
version = "0.1.0"
description = "Mine reusable Claude Code Skills from your own session history. 100% local."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xwmxcz" }]
keywords = ["claude", "claude-code", "agent", "skills", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
skill-miner = "skill_miner.cli:main"

[project.urls]
Homepage = "https://github.com/xwmxcz/skill-miner"
Issues = "https://github.com/xwmxcz/skill-miner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"skill_miner.resources" = ["**/*.md"]
